--- a/us/SonicScoutAndroid/app/src/main/res/layout/teleop_scouting.xml
+++ b/us/SonicScoutAndroid/app/src/main/res/layout/teleop_scouting.xml
@@ -304,6 +304,28 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
+
+            <TextView
+                android:id="@+id/teleOpCoralL4Score"
+                android:layout_width="@dimen/_115sdp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="@dimen/_6sdp"
+                android:background="@color/white"
+                android:gravity="center"
+                android:inputType="none"
+                android:text="SCORED"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_15ssp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
             <TextView
                 android:id="@+id/AmpScoredCounter"
                 android:layout_width="@dimen/_29sdp"
